# team-nixops

./: .env.template  .envrc  .gitignore  .sops.yaml  README.md  checklist.md  dash.txt  docker-compose.yml  flake.nix  out.json
client/: .envrc  README.md  default.nix  flake.nix  package-lock.json  package.json  pnpm-lock.yaml
deliverables/: analysis_object_model.drawio  problem_statement.md
embedder-bridge/: default.nix  settings.gradle.kts
embedding-bridge/: .envrc  build.gradle.kts  default.nix  settings.gradle.kts
genai/: .env.example  .envrc  .gitignore  .pdm-python  Dockerfile  Dockerfile.mcp  README.md  compose.yml  default.nix  docker-compose.yml  flake.nix  milvus.py  openapi.yml  pyproject.toml
genai/api/: README.md  openapi.yaml  setup.cfg
genai/api/.openapi-generator/: FILES
genai/api/src/openapi_server/: main.py  security_api.py
genai/api/src/openapi_server/apis/: default_api.py  default_api_base.py  embedding_api.py  embedding_api_base.py  generation_api.py  generation_api_base.py  pet_api.py  pet_api_base.py  user_api.py  user_api_base.py
genai/api/src/openapi_server/models/: api_response.py  appointment.py  category.py  course.py  error.py  module.py  module_courses.py  order.py  pet.py  semester.py  study_program.py  study_program_selector_item.py  tag.py  user.py
genai/api/tests/: test_default_api.py  test_embedding.py  test_embedding_api.py  test_generation_api.py  test_pet_api.py  test_user_api.py
genai/src/: __init__.py  app.py  lang.py
genai/src/genai/: __main__.py  app.py  embedding.py
genai/src/genai/clients/: __init__.py  chat.py  embedding.py  reasoning.py
genai/src/genai/config/: config.py  env.py  logging.py  openapi.py  telemetry.py
genai/src/genai/data/: db.py  vector_db.py
genai/src/genai/db/: relational_db.py  vector_db.py
genai/src/genai/routers/: embed.py  embedding.py  generation.py  stream.py
helm/: .envrc  .helmignore  Makefile  README.md  secrets.md  values.ci.yaml  values.yaml
nix/: .envrc  README.md  devShell.nix  treefmt.nix
schedule-manager/: build.gradle.kts  default.nix  openapi.yaml  settings.gradle.kts
schedule-optimizer/: build.gradle.kts  default.nix  deps.json  openapi.yaml  settings.gradle.kts
schedulingEngine/: .envrc  build.gradle.kts  default.nix  deps.json  openapi.yaml  settings.gradle.kts
scraper/: Dockerfile  build.gradle.kts  default.nix  docker-compose.yml  openapi.yaml  out.json  todo.md
terraform/: README.md
(+396 files in other folders)
