[project]
name = "genai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GHOSCHT", email = "31184695+GHOSCHT@users.noreply.github.com"},
]
dependencies = [
    "fastapi>=0.115.12",
    "openapi_server",
]
# dependencies = ["api"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.uv.sources]
openapi_server = { path = "api" }
