[project]
name = "genai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GHOSCHT", email = "31184695+GHOSCHT@users.noreply.github.com"},
]
dependencies = [
    "fastapi>=0.115.12",
    "openapi-server",
    "setuptools>=80.9.0",
]

[project.scripts]
genai = "genai.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

dependencies = [
    "fastapi>=0.115.12",
    "openapi_server",
    "setuptools>=80.9.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.uv.sources]
openapi_server = { path = "api" }
