[project]
name = "genai"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
  { name = "GHOSCHT", email = "31184695+GHOSCHT@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
  "dotenv>=0.9.9",
  "fastapi>=0.115.12",
  "langchain-milvus>=0.2.0",
  "langchain-ollama>=0.3.3",
  "langchain-openai>=0.3.18",
  "langchain[ollama]>=0.3.25",
  "langchain-community>=0.3.25",
  "langgraph>=0.4.7",
  "openapi_server",
  "pymilvus>=2.5.10",
  "python-decouple>=3.8",
  "SQLAlchemy>=2.0.41",
  "psycopg2>=2.9.10",
  "opentelemetry-sdk>=1.34.1",
  "opentelemetry-instrumentation>=0.55b1",
  "opentelemetry-exporter-prometheus>=0.55b1",
  "opentelemetry-instrumentation-langchain>=0.40.14",
  "opentelemetry-instrumentation-fastapi>=0.55b1",
  "redis>=6.2.0",
  "langgraph-checkpoint-redis>=0.0.8"
]

[project.scripts]
genai = "genai.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

dependencies = ["fastapi>=0.115.12", "openapi_server", "setuptools>=80.9.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.uv.sources]
openapi_server = { path = "api" }
